# GoldApple_Parser

./: README.md  goldapple.csv  main.py  parser.py  pyproject.toml  requirements.txt  save_to_csv.py
tests/: test_parser.py  test_save_to_csv.py
tests/data/: test_get_perfumes_data.html  test_page1.html
