[tool.poetry]
name = "goldapple-parser"
version = "0.1.0"
description = ""
authors = ["Sergey Korchmin <sergey.korchmin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
tqdm = "^4.67.1"
responses = "^0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
